<resources>
    <string name="app_name">Soul-U</string>
    <string name="title_home">Home</string>
    <string name="title_new_chat">New Chat</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_login">LOGIN</string>
    <string name="title_sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="action_sign_in">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="image_logo">Logo</string>
    <string name="image_card_view_home">image_card_view_home</string>
    <string name="or_use">Or Use</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_card_view_home">Hi, Soul-U here to help you understand\n your emotional concern</string>
    <string name="title_our_services">Our Services</string>
    <string name="content_description_service">Image Service in Home</string>
    <string name="article">Article</string>
    <string name="notification">Notification</string>
    <string name="more_menu">More Menu</string>
    <string name="title_name_profile">Name</string>
    <string name="typing">Typing…</string>
    <string name="tv_title_phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="edit_photo">edit photo</string>
    <string name="logout">Log Out</string>
    <string name="title_logout_account">Log Out !</string>
    <string name="description_logout">Do You want to LogOut?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_account">Delete Account</string>
    <string name="telephone">Empty</string>
    <string name="gender_profile">Empty</string>
    <string name="date_birth">Empty</string>
    <string name="empty">Empty</string>
    <string name="meditation">Meditation</string>
    <string name="diagnose">Diagnose</string>
    <string name="consultation">Consultation</string>
    <string name="search">Search</string>
    <string name="today">Today</string>
    <string name="title_history_in_card">You have chat with Dr. Maya</string>
    <string name="time_in_card_history">09.03 AM</string>
    <string name="name_profile">Dr. Maya Maharani, S. Psi, M. Psi </string>
    <string name="online">Online</string>
    <string name="title_some_articles">Some Articles for you</string>
    <string name="title_article">Five key themes for improved mental health care for refugees and migrants</string>
    <string name="title_meditation_page">Meditation Recommendations for You</string>
    <string name="sleep_training">Sleep Training</string>
    <string name="tackling_stress">Tackling Stress</string>
    <string name="self_love">Self Love</string>
    <string name="overcome_depression">Overcome Depression</string>
    <string name="managing_anger">Managing Anger</string>
    <string name="mindful_games">Mindful Games</string>
    <string name="image_psychology">image psychology</string>
    <string name="name_profile_psychology">Catherine Amanda, S. Psi, M. Psi.</string>
    <string name="experience">8 years experience</string>
    <string name="spesialis">Adult Clinical Psychology</string>
    <string name="chat">CHAT</string>
    <string name="title_diagnose_ai">Over the past month, have you often felt anxious, unhappy, or depressed about something?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back_to_start">Back to Start</string>
    <string name="yes_more_than">Yes, more than usual</string>
    <string name="same_as_usual">Same as usual</string>
    <string name="less_than_usual">Less than usual</string>
    <string name="much_less_than_usual">Much less than usual</string>
    <string name="finish">Finish</string>
    <string name="your_result">Your Result:</string>
    <string name="no_soal">1/10</string>
    <string name="mood">Mood Disorder</string>
    <string name="find_out_more">Find out more about mood disorders</string>
    <string name="find_out_how">Find out how to overcome with mood disorders</string>
    <string name="here">Here</string>
</resources>