<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/forest_frolic"
    tools:context=".ui.diagnosis.DiagnosisActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.Material3.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIconTint="@color/white"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
            android:background="@color/orient_green"
            android:paddingEnd="10dp"
            app:menu="@menu/menu_room_chat"
            android:minHeight="?actionBarSize">
            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo_horizontal_appbar"
                android:contentDescription="@string/image_logo"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        android:text="@string/no_soal"
        android:fontFamily="@font/inter_medium"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/title_diagnose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/title_diagnose_ai"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        style="@style/Widget.Material3.MaterialDivider"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:dividerColor="@color/white"
        app:dividerThickness="2dp"
        app:layout_constraintStart_toStartOf="@+id/title_diagnose"
        app:layout_constraintTop_toBottomOf="@+id/title_diagnose" />


    <CheckBox
        android:id="@+id/checkbox_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter"
        android:paddingStart="12dp"
        android:text="@string/yes_more_than"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:buttonTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <CheckBox
        android:id="@+id/checkbox_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/white"
        android:fontFamily="@font/inter"
        android:paddingStart="12dp"
        android:text="@string/same_as_usual"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/checkbox_1"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_1" />

    <CheckBox
        android:id="@+id/checkbox_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/white"
        android:fontFamily="@font/inter"
        android:paddingStart="12dp"
        android:text="@string/less_than_usual"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/checkbox_2"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_2" />


    <CheckBox
        android:id="@+id/checkbox_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/white"
        android:fontFamily="@font/inter"
        android:paddingStart="12dp"
        android:text="@string/much_less_than_usual"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/checkbox_3"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_3" />

    <TextView
        android:id="@+id/btn_previous"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:paddingStart="5dp"
        android:paddingEnd="16dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center_vertical"
        android:background="@drawable/btn_prev_next"
        android:text="@string/previous"
        android:textColor="@color/forest_frolic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_4"
        app:drawableStartCompat="@drawable/undo_24px"
        android:drawablePadding="8dp"
        app:drawableTint="@color/forest_frolic" />

    <TextView
        android:id="@+id/btn_next"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/garlic_butter"
        android:background="@drawable/btn_prev_next"
        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:text="@string/next"
        android:textColor="@color/white"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_previous"
        app:drawableEndCompat="@drawable/redo_24px" />
</androidx.constraintlayout.widget.ConstraintLayout>