<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/forest_frolic"
    tools:context=".ui.result_diagnose.ResultDiagnoseActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.Material3.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIconTint="@color/white"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
            android:background="@color/orient_green"
            android:paddingEnd="10dp"
            app:menu="@menu/menu_room_chat"
            android:minHeight="?actionBarSize">
            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo_horizontal_appbar"
                android:contentDescription="@string/image_logo"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_title_your_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/your_result"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tv_title_result_diagnose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/mood"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_your_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_your_result" />


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider3"
        style="@style/Widget.Material3.MaterialDivider"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:dividerColor="@color/white"
        app:dividerThickness="2dp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_result_diagnose"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_result_diagnose" />

    <TextView
        android:id="@+id/tv_title_find_out_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter"
        android:text="@string/find_out_more"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"/>

    <TextView
        android:id="@+id/here_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/inter"
        android:text="@string/here"
        android:textColor="@color/garlic_butter"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_title_find_out_more"
        app:layout_constraintTop_toTopOf="@+id/tv_title_find_out_more" />

    <TextView
        android:id="@+id/tv_title_find_out_how"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/inter"
        android:text="@string/find_out_more"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_find_out_more" />

    <TextView
        android:id="@+id/here_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/inter"
        android:text="@string/here"
        android:textColor="@color/garlic_butter"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_title_find_out_how"
        app:layout_constraintTop_toTopOf="@+id/tv_title_find_out_how" />

    <TextView
        android:id="@+id/btn_previous"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/btn_prev_next"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/back_to_start"
        android:textColor="@color/forest_frolic"
        app:drawableStartCompat="@drawable/undo_24px"
        app:drawableTint="@color/forest_frolic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_find_out_how" />

    <TextView
        android:id="@+id/btn_next"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/garlic_butter"
        android:background="@drawable/btn_prev_next"
        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:text="@string/finish"
        android:textColor="@color/white"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_previous"
        app:drawableEndCompat="@drawable/redo_24px" />
</androidx.constraintlayout.widget.ConstraintLayout>