<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:backgroundTint="@color/homeopathic_lime"
    app:strokeWidth="0dp"
    app:cardElevation="4dp"
    android:layout_margin="16dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_history_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/title_history_in_card"
            android:textColor="@color/green_bottle"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time_in_card_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/time_in_card_history"
            android:textColor="@color/dark_limestone"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_history_card" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_card_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            app:dividerColor="@color/orient_green"
            app:dividerThickness="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_history_card" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_profile_card_history"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="13dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_card_history" />

        <TextView
            android:id="@+id/title_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/typing"
            android:textColor="@color/dark_limestone"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/photo_profile_card_history"
            app:layout_constraintStart_toEndOf="@+id/photo_profile_card_history"
            app:layout_constraintTop_toTopOf="@+id/photo_profile_card_history" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>